Make sure the modifications cover page widget works for all HRSA covers

--- a/bloom_nofos/bloom_nofos/static/theme-opdiv-hrsa-blue.css
+++ b/bloom_nofos/bloom_nofos/static/theme-opdiv-hrsa-blue.css
@@ -42,11 +42,19 @@ h4 {
   fill: var(--color--white);
 }
 
+.nofo--cover-page .nofo--cover-page--callout-box {
+  background-color: var(--color--pale-blue);
+}
+
 /* Cover page: text */
 
 .nofo--cover-page--text .nofo--cover-page--header--logo svg .hrsa-text--blue,
 .nofo--cover-page--text .nofo--cover-page--header--logo svg .hrsa-text--red {
   fill: var(--color--white);
+}
+
+.nofo--cover-page--text .nofo--cover-page--callout-box {
+  background-color: var(--color--white);
 }
 
 /* Cover page: hero image */
